pkg/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: asm-user-auth
  labels:
    app: authservice
spec:
  selector:
    app: authservice
  ports:
  - name: grpc
    port: 10003
    targetPort: 10003
  - name: http
    port: 10004
    targetPort: 10004
  - name: info
    port: 9901
    targetPort: 9901
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: asm-user-auth
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: gcr.io/gke-release/ais:hybrid_identity_charon_20210629_RC00  # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.user-auth.image"}
        imagePullPolicy: IfNotPresent
        command:
        - /usr/bin/ais
        - --uid=
        - --gid=
        - --logtostderr
        - --config=/etc/config/config.yaml
        ports:
        - containerPort: 10003
          protocol: TCP
        - containerPort: 10004
          protocol: TCP
        - containerPort: 9901
          protocol: TCP
        resources:
          limits:
            cpu: 2.0
            memory: 512M
          requests:
            cpu: 1.0
            memory: 256M
        volumeMounts:
        - mountPath: /etc/ais/certs
          name: key-volume
        - mountPath: /etc/config
          name: config-volume
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: key-volume
        secret:
          defaultMode: 420
          secretName: secret-key
      - configMap:
          defaultMode: 420
          name: user-auth-config
        name: config-volume
      - name: tmp
        emptyDir: {}
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: authservice-mtls
  namespace: asm-user-auth
spec:
  selector:
    matchLabels:
      app: authservice
  mtls:
    mode: STRICT
  portLevelMtls:
    10004:
      mode: PERMISSIVE
